refactor: Simplify compact logging for `ClockRecord`